--- a/frontend/bookpage.css
+++ b/frontend/bookpage.css
@@ -1,4 +1,3 @@
-/* Reset and base styles */
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +13,8 @@ body {
 
 /* Header styles */
 .hero {
+  display: flex;
+  flex-direction: column;
   background-color: #FAFDF3;
   padding: 0px 200px;
 }
@@ -26,16 +27,21 @@ body {
 }
 
 .logo {
+  display: flex;
   font-size: 24px;
+  color: #F9FAF8;
   font-weight: 450;
   letter-spacing: 8px;
 }
 
 .gradient-text {
+  width: 40%;
+  text-align: center;
   background: -webkit-linear-gradient(right, #0943F1, #FA4616);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 
 .profile {
   display: flex;
@@ -62,7 +68,6 @@ body {
   border-radius: 50%;
   object-fit: cover;
 }
-
 /* Main body styles */
 .main-body {
   padding: 40px 200px;
