--- a/frontend/searchres.css
+++ b/frontend/searchres.css
@@ -1,4 +1,3 @@
-/* Reset and base styles */
 * {
   margin: 0;
   padding: 0;
@@ -320,3 +319,12 @@ body {
   }
 }
 
+.review-container {
+  margin: 10px;
+  border-bottom: 1px solid #e0e0e0;
+  padding-bottom: 20px;
+}
+
+.review-container:last-child {
+  border-bottom: none;
+}
