Add link to home page

--- a/backend/templates/searchres.html
+++ b/backend/templates/searchres.html
@@ -15,7 +15,7 @@
 <body>
     <div class="hero">
         <div class="header">
-            <div class="logo gradient-text">Rate My Textbook</div>
+            <div class="logo gradient-text"><a href="/">Rate My Textbook</a></div>
             <div class="button">
                 <div class="profile">
                     <ul class="links">
