--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
     <link rel="stylesheet" href="static/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
-<body>    
+
+<body>
     <div class="hero">
         <div class="header">
             <div class="logo gradient-text"><a href="/">Rate My Textbook</a></div>
@@ -31,20 +34,21 @@
         </div>
         <div class="bot-hero">
             <div class="search-title">
-              <div class="search-text">
-                Find Your Textbook!
-              </div>
-              <div>
-                <form class="search-bar" action="search" method="GET">
-                    <input type="text"  name="query" placeholder="Search..." required />
-                    <button type="submit">&#x1F50D;</button>
-                </form>
-              </div>
+                <div class="search-text">
+                    Find Your Textbook!
+                </div>
+                <div>
+                    <form class="search-bar" action="search" method="GET">
+                        <input type="text" name="query" placeholder="Search..." required />
+                        <button type="submit">&#x1F50D;</button>
+                    </form>
+                </div>
             </div>
-          </div>
+        </div>
     </div>
     <div class="footer">
         <div class="footer-text">Copyright © Rate My Textbooks 2025</div>
     </div>
 </body>
+
 </html>
