--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -43,7 +43,7 @@
             const token = credential.accessToken;
             const user = result.user;
             console.log(user);
-            window.location.href = `/logged-in?username=${user.email}&display=${user.displayName}`
+            window.location.href = `/logged-in?username=${user.email}&display=${user.displayName}&url=${user.photoURL}`
         });
     </script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" />
