--- a/backend/templates/bookpage.html
+++ b/backend/templates/bookpage.html
@@ -23,17 +23,17 @@
             </div>
             <div class="profile">
                 <ul class="links">
-                        {% if user is not none %}
-                        <li><a href="#">{{ user.display }}</a></li>
-                        {% else %}
-                        <li><a href="login">Log in</a></li>
-                        {% endif %}
-                </ul>
-                    {% if user is none %}
-                    <img src="profile.png" class="profile-pic">
+                    {% if user is not none %}
+                    <li><a href="#">{{ user.display }}</a></li>
                     {% else %}
-                    <img src="{{user.pfp}}" class="profile-pic">
+                    <li><a href="login">Log in</a></li>
                     {% endif %}
+                </ul>
+                {% if user is none %}
+                <img src="profile.png" class="profile-pic">
+                {% else %}
+                <img src="{{user.pfp}}" class="profile-pic">
+                {% endif %}
             </div>
         </div>
     </div>
@@ -46,8 +46,13 @@
             <div class="book-info">
                 <h1 class="book-title">{{ title }}</h1>
                 <p class="book-author">by {{ author }}</p>
-                <p class="book-description">A comprehensive introduction to the field of computer science, covering
-                    fundamental concepts and modern applications.</p>
+                <p class="book-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
                 <button class="rate-button">Rate this Book</button>
             </div>
         </div>
