pfp for not logged in users

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -33,7 +33,7 @@
                         {% endif %}
                     </ul>
                     {% if user is none %}
-                    <img src="profile.png" class="profile-pic">
+                    <img src="/static/profile.png" class="profile-pic">
                     {% else %}
                     <img src="{{user.pfp}}" class="profile-pic">
                     {% endif %}
