--- a/backend/templates/bookpage.html
+++ b/backend/templates/bookpage.html
@@ -30,7 +30,7 @@
                     {% endif %}
                 </ul>
                 {% if user is none %}
-                <img src="profile.png" class="profile-pic">
+                <img src="/static/profile.png" class="profile-pic">
                 {% else %}
                 <img src="{{user.pfp}}" class="profile-pic">
                 {% endif %}
