removed your reviews button

--- a/backend/templates/searchres.html
+++ b/backend/templates/searchres.html
@@ -19,13 +19,6 @@
             <div class="button">
                 <div class="profile">
                     <ul class="links">
-                        <li><a href="#"></a>Your Reviews</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="button">
-                <div class="profile">
-                    <ul class="links">
                     {% if user is not none %}
                     <li><a href="/signout">{{ user.display }}</a></li>
                     {% else %}
@@ -78,7 +71,7 @@
         </section>
     </div>
     <div class="footer">
-        <div class="footer-text">Copyright © Rate My Textbooks 2025</div>
+        <div class="footer-text">Rate My Textbooks 2025</div>
     </div>
 </body>
 
