--- a/backend/templates/userReviews.html
+++ b/backend/templates/userReviews.html
@@ -16,13 +16,6 @@
             <div class="button">
                 <div class="profile">
                     <ul class="links">
-                        <li><a href="#"></a>Your Reviews</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="button">
-                <div class="profile">
-                    <ul class="links">
                         {% if user is not none %}
                         <li><a href="/signout">{{ user.display }}</a></li>
                         {% else %}
@@ -87,7 +80,7 @@
         </section>
     </div>
     <div class="footer">
-        <div class="footer-text">Copyright © Rate my Textbook 2025</div>
+        <div class="footer-text">Rate my Textbook 2025</div>
     </div>
 </body>
 </html>
