done by anya, added book editions

--- a/frontend/searchres.css
+++ b/frontend/searchres.css
@@ -328,3 +328,9 @@ body {
 .review-container:last-child {
   border-bottom: none;
 }
+
+.book-edition {
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 5px;
+}
