--- a/backend/templates/bookpage.html
+++ b/backend/templates/bookpage.html
@@ -41,6 +41,8 @@
             <div class="book-info">
                 <h1 class="book-title">{{ title }}</h1>
                 <p class="book-author">by {{ author }}</p>
+                <p class="book-edition">Edition: {{ edition }}</p>
+
                 <p class="book-description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
